<?xml version="1.0"?>
<package format="2">
  <name>lidar_pkg</name>
  <version>0.0.1</version>
  <description>ROS 1 driver for lidar with filtering</description>

  <maintainer email="zhangwanjie@6-robot.com">ZhangWanjie</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>